@@ -18,6 +18,7 @@ phpMyAdmin - ChangeLog
 + rfe #3507804 Session upload progress (PHP 5.4)
 + rfe #3488185 draggable columns vs copy column name
 + Patch #3507001 Contest-4: Textarea for large character columns
++ Removed the PHP version of the ENUM editor
 
 3.5.1.0 (not yet released)
 - bug #3510784 [edit] Limit clause ignored when sort order is remembered
